pom stuff