@@ -1656,21 +1656,14 @@
 			</activation>
 			<properties>
 				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-				<!--jacoco.version>0.7.4.201502262128</jacoco.version -->
 				<jacoco.version>0.8.2</jacoco.version>
 				<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
 				<jacoco.out.ut.file>jacoco.exec</jacoco.out.ut.file>
 				<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
 				<sonar.jacoco.reportPaths>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPaths>
 				<sonar.jacoco.itReportPaths>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPaths>
-				<!-- command line arguments when starting test for test coverage analysis -->
-				<jacoco.arguments.ut>-Xmx1G
-					-XX:+UseConcMarkSweepGC
-					-XX:+CMSClassUnloadingEnabled
-					${jacoco.agent.ut.arg}</jacoco.arguments.ut>
-				<jacoco.arguments.it>-Xmx1G -XX:MaxPermSize=512m
-					-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
-					${jacoco.agent.it.arg}</jacoco.arguments.it>
+				<jacoco.arguments.ut>-Xmx1G -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</jacoco.arguments.ut>
+				<jacoco.arguments.it>-Xmx1G -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</jacoco.arguments.it>
 			</properties>
 
 			<build>
@@ -1689,8 +1682,6 @@
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<executions>
-							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
 							<execution>
 								<id>prepare-ut-agent</id>
 								<phase>process-test-classes</phase>
@@ -1703,15 +1694,6 @@
 									<append>true</append>
 								</configuration>
 							</execution>
-							<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
-							<!-- <execution> <id>prepare-it-agent</id> -->
-							<!-- moved to package phase to be sure all pre-integration test have 
-								it already set to bring up environments with jacoco agent as JVM params -->
-							<!-- <phase>package</phase> <goals> <goal>prepare-agent-integration</goal> 
-								</goals> <configuration> <destFile>${sonar.jacoco.itReportPath}</destFile> 
-								<propertyName>jacoco.agent.it.arg</propertyName> <append>true</append> </configuration> 
-								</execution> -->
 							<execution>
 								<id>jacoco-site</id>
 								<phase>test</phase>
